--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -1,7 +1,7 @@
 name: Testing
 run-name: Testing
 
-on: # yamllint disable-line rule:truthy
+on:  # yamllint disable-line rule:truthy
   # Allows you to run this workflow from another workflow
   workflow_call:
     inputs:
@@ -21,7 +21,8 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: ["3.13", "3.12"] #CHECK: not forget to add new version of python
+        # CHECK: Not forget to add new version of python
+        python-version: ["3.13", "3.12"]
         os: [ubuntu-latest]
     # name for files
     env:
@@ -30,10 +31,10 @@ jobs:
     defaults:
       run:
         shell: bash -l {0}
-    
+
     steps:
     # Install skada
-    - name: Checking Out Repository
+    - name: Checking Out Repository  # yamllint disable-line rule:indentation
       uses: actions/checkout@v4
       with:
         ref: ${{ github.event.pull_request.head.sha || github.ref }}
@@ -41,7 +42,7 @@ jobs:
     - uses: actions/setup-python@v5
       with:
         python-version: ${{ matrix.python-version }}
-        cache: 'pip' # caching pip dependencies
+        cache: 'pip'  # caching pip dependencies
     - run: which python
     - name: Install 'skada' package
       run: |
