--- a/codecov.yml
+++ b/codecov.yml
@@ -5,9 +5,9 @@
 codecov:
   bot: "codecov-io"
   strict_yaml_branch: "yaml-config"
-  require_ci_to_pass: yes
+  require_ci_to_pass: yes  # yamllint disable-line rule:truthy
   notify:
-    wait_for_ci: yes
+    wait_for_ci: yes       # yamllint disable-line rule:truthy
 
 coverage:
   precision: 2
@@ -16,24 +16,24 @@ coverage:
   status:
     project:
       default:
-        base: auto    # target to compare against 
-        target: auto  # target "X%" coverage to hit on project
-        threshold: 0.5% # allow this much decrease from base
+        base: auto         # target to compare against
+        target: auto       # target "X%" coverage to hit on project
+        threshold: 0.5%    # allow this much decrease from base
         if_ci_failed: error
     patch:
       default:
-        base: auto      # target to compare against
-        target: 50%     # target "X%" coverage to hit on patch
-        # threshold: 50%  # allow this much decrease on patch
+        base: auto         # target to compare against
+        target: 50%        # target "X%" coverage to hit on patch
+        # threshold: 50%   # allow this much decrease on patch
     changes: false
 
 parsers:
   gcov:
     branch_detection:
-      conditional: yes
-      loop: yes
-      method: no
-      macro: no
+      conditional: yes    # yamllint disable-line rule:truthy
+      loop: yes           # yamllint disable-line rule:truthy
+      method: no          # yamllint disable-line rule:truthy
+      macro: no           # yamllint disable-line rule:truthy
 
 # https://docs.codecov.io/docs/ignoring-paths
 # ignore:
@@ -43,4 +43,4 @@ parsers:
 comment:
   layout: header, diff, sunburst, uncovered
   behavior: default
-  require_changes: true  # if true: only post the comment if coverage changes
+  require_changes: true    # if true: only post the comment if coverage changes
