--- a/.github/workflows/main_workflow.yml
+++ b/.github/workflows/main_workflow.yml
@@ -1,6 +1,6 @@
 # Management of the action do made during a pull request
 
-name: 'Main_workflow'
+name: ''
 on:  # yamllint disable-line rule:truthy
   pull_request:
     # Using 'pull_request_target' instead of 'pull_request':
