--- a/.github/workflows/testing_minimal.yml
+++ b/.github/workflows/testing_minimal.yml
@@ -1,4 +1,4 @@
-name: Tests minimal
+name: ' '
 
 on:   # yamllint disable-line rule:truthy
   # Allows you to run this workflow from another workflow
