--- a/.github/workflows/main_workflow.yml
+++ b/.github/workflows/main_workflow.yml
@@ -50,16 +50,19 @@ jobs:
           fi
 
   linter:
+    name: ' '
     needs: [get_information]
     uses: ./.github/workflows/linter.yml
 
   tests_minimal:
+    name: ' '
     needs: [linter, get_information]
     uses: ./.github/workflows/testing_minimal.yml
     with:
       skip_test: ${{ contains(needs.get_information.outputs.COMMIT_MSG, '[skip tests]') }}
 
   tests:
+    name: ' '
     needs: [linter, get_information]
     uses: ./.github/workflows/testing.yml
     with:
