--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -25,7 +25,7 @@ jobs:
     steps:
 
     # Install skada
-    - name: Checking Out Repository
+    - name: Checking Out Repository  # yamllint disable-line rule:indentation
       uses: actions/checkout@v4
     # Cache 'skada' datasets
     - name: Create/Restore Skada Data Cache
@@ -46,7 +46,6 @@ jobs:
         pre-commit run --all-files
 
 
-
   Test-minimal:
     runs-on: ubuntu-latest
     strategy:
@@ -57,7 +56,7 @@ jobs:
     steps:
 
     # Install skada
-    - name: Checking Out Repository
+    - name: Checking Out Repository  # yamllint disable-line rule:indentation
       uses: actions/checkout@v4
     # Cache 'skada' datasets
     - name: Create/Restore Skada Data Cache
@@ -98,7 +97,7 @@ jobs:
     steps:
 
     # Install skada
-    - name: Checking Out Repository
+    - name: Checking Out Repository  # yamllint disable-line rule:indentation
       uses: actions/checkout@v4
     # Cache 'skada' datasets
     - name: Create/Restore Skada Data Cache
