--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -77,7 +77,7 @@ jobs:
         python -m pip install --user -e .[test]
     # Run Tests
     - name: Run Tests without torch
-      run: pytest skada/ --verbose --cov=skada --cov-report term -m "no dataset"
+      run: pytest skada/ --verbose --cov=skada --cov-report term -m "not dataset"
     # Codecov
     - name: Upload coverage reports to Codecov
       uses: codecov/codecov-action@v5
@@ -119,7 +119,7 @@ jobs:
         python -m pip install --user -e .[deep,test]
     # Run Tests
     - name: Run Tests with torch
-      run: pytest skada/ --verbose --cov=skada --cov-report term -m "no dataset"
+      run: pytest skada/ --verbose --cov=skada --cov-report term -m "not dataset"
     # Codecov
     - name: Upload coverage reports to Codecov
       uses: codecov/codecov-action@v5
