--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -81,10 +81,11 @@ jobs:
     # Codecov
     - name: Upload coverage reports to Codecov
       uses: codecov/codecov-action@v5
-      env:
-        token: ${{ secrets.CODECOV_TOKEN }}
+      with:
         verbose: true
         fail_ci_if_error: true
+      env:
+        CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
 
 
   Test:
@@ -121,7 +122,8 @@ jobs:
     # Codecov
     - name: Upload coverage reports to Codecov
       uses: codecov/codecov-action@v5
-      env:
-        token: ${{ secrets.CODECOV_TOKEN }}
+      with:
         verbose: true
         fail_ci_if_error: true
+      env:
+        CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
