--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -94,7 +94,7 @@ jobs:
       fail-fast: false
       matrix:
         python-version: ["3.12"]
-        os: [macos-latest]
+        os: [ubuntu-latest]
     env:
       OS: ${{ matrix.os }}
       PYTHON: ${{ matrix.python-version }}
