--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -83,7 +83,7 @@ jobs:
       with:
         verbose: true
         fail_ci_if_error: true
-        gcov_ignore: "skada/dataset/"
+        gcov_ignore: "skada/dataset"
       env:
         CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
 
@@ -125,6 +125,6 @@ jobs:
       with:
         verbose: true
         fail_ci_if_error: true
-        gcov_ignore: "skada/dataset/"
+        gcov_ignore: "skada/dataset"
       env:
         CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
