add environement variable

--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -117,5 +117,6 @@ jobs:
         verbose: true
         fail_ci_if_error: true
         gcov_ignore: "skada/datasets"
+        env_vars: OS,PYTHON
       env:
         CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
