--- a/.github/workflows/testing_dataset.yml
+++ b/.github/workflows/testing_dataset.yml
@@ -12,7 +12,7 @@ on:  # yamllint disable-line rule:truthy
 
 jobs:
   Dataset:
-    if: contains(github.event.pull_request.title, '[dataset]') || github.event_name == 'push' || github.event_name == 'schedule' || github.event_name == 'workflow_dispatch'
+    if: contains(github.event.pull_request.title, '[dataset]') || github.event_name == 'schedule' || github.event_name == 'workflow_dispatch'
     runs-on: ${{ matrix.os }}
     strategy:
       fail-fast: false
@@ -39,10 +39,9 @@ jobs:
     - name: Install 'skada' package
       run: |
         python -m pip install --upgrade --progress-bar off pip
-        python -m pip install -e .[deep,test]
     # Run Tests
     - name: Run Tests without torch
-      run: pytest skada --verbose --cov=skada --cov-report term
+      run: pytest skada/dataset --verbose --cov=skada_dataset --cov-report term
     # Codecov
     - name: Upload coverage reports to Codecov
       uses: codecov/codecov-action@v5
@@ -50,5 +49,6 @@ jobs:
         verbose: true
         fail_ci_if_error: true
         env_vars: OS,PYTHON
+        flags: dataset, code
       env:
         CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
