--- a/.github/workflows/testing_dataset.yml
+++ b/.github/workflows/testing_dataset.yml
@@ -39,6 +39,7 @@ jobs:
     - name: Install 'skada' package
       run: |
         python -m pip install --upgrade --progress-bar off pip
+        python -m pip install -e .[test]
     # Run Tests
     - name: Run Tests without torch
       run: pytest skada/dataset --verbose --cov=skada_dataset --cov-report term
