--- a/.github/workflows/testing_dataset.yml
+++ b/.github/workflows/testing_dataset.yml
@@ -50,6 +50,6 @@ jobs:
         verbose: true
         fail_ci_if_error: true
         env_vars: OS,PYTHON
-        flags: dataset, code
+        flags: dataset
       env:
         CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
