Not skipping test because require torch

--- a/.github/workflows/testing_dataset.yml
+++ b/.github/workflows/testing_dataset.yml
@@ -39,7 +39,7 @@ jobs:
     - name: Install 'skada' package
       run: |
         python -m pip install --upgrade --progress-bar off pip
-        python -m pip install -e .[test]
+        python -m pip install -e .[deep,test]
     # Run Tests
     - name: Run Tests for dataset
       run: pytest skada --verbose --cov=skada --cov-report term -m="dataset"
