add ignore file or including file

--- a/.github/workflows/testing_dataset.yml
+++ b/.github/workflows/testing_dataset.yml
@@ -50,6 +50,7 @@ jobs:
         verbose: true
         fail_ci_if_error: true
         env_vars: OS,PYTHON
+        gcov_include: "skada/datasets"
         flags: dataset
       env:
         CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
