ignore other file for testing dataset

--- a/.github/workflows/testing_dataset.yml
+++ b/.github/workflows/testing_dataset.yml
@@ -51,6 +51,7 @@ jobs:
         fail_ci_if_error: true
         env_vars: OS,PYTHON
         gcov_include: "skada/datasets"
+        gcov_ignore: "**/*"
         flags: dataset
       env:
         CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
