--- a/.github/workflows/labeler.yml
+++ b/.github/workflows/labeler.yml
@@ -3,7 +3,8 @@ name: "Pull Request Labeler"
 on:  # yamllint disable-line rule:truthy
   pull_request_target:
     branches:
-      - 'master'
+      - 'main'
+
 jobs:
   labeler:
     permissions:
