--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,6 +40,7 @@ dependencies = [
     "scikit-learn >= 1.5.0",
     "POT >= 0.9.3",
     "pandas>=2.3.0",
+    "deprecated>=1.2.13"
 ]
 
 [project.optional-dependencies]
