Use Flag for improving the management of CodeCov (#343)
* add flag to codecov

* Update the test following the flag of codecov

* add test

* install pytest

* fix name for tests

* fix the selection of dataset tests

* run test only for datatsets

* remove unecesary flags

* fix error on the generation of coverage for dataset

* Update README.md

* Update README.md

* Not skipping test because require torch

* add ignore file or including file

* ignore other file for testing dataset

* exclude file for dataset label

* fix README

* fix schedule for testing dataset

* fix scedule for testing dataset

* fix coverage for dataset tests

* update coverage fro dataset only

* fix README

* use all the tests of skada

* rerun CI

* rerun CI

---------

Co-authored-by: Rémi Flamary <remi.flamary@gmail.com>

--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -116,7 +116,8 @@ jobs:
       with:
         verbose: true
         fail_ci_if_error: true
-        gcov_ignore: "skada/datasets"
         env_vars: OS,PYTHON
+        gcov_ignore: "skada/datasets"
+        flags: code
       env:
         CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
