--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,8 @@ description = "A Python package for domain adaptation compatible with scikit-lea
 authors = [
         {name = "SKADA Team"},
         ]
-license = {file = "COPYING"}
+license = "BSD-3-Clause"
+license-files = ["COPYING"]
 readme = "README.md"
 requires-python = ">= 3.9"
 keywords = ["domain-adaptation", "scikit-learn", "pytorch",
